implementing the repository and unitofwork

--- a/TodoApp.Web/appsettings.json
+++ b/TodoApp.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=GameZone;Trusted_Connection=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=.;Database=ToDoApp;Trusted_Connection=True;TrustServerCertificate=true;"
   }
 }
